==> eziya/STM32F4_HAL_LWIP_LAB/STM32F4_HAL_ENC28J60/Core/Src/enc28j60.c <==
#include "enc28j60.h"
#include "main.h"
#include "spi.h"
#include "gpio.h"
#define ENC_POLLTIMEOUT 50
#define ALIGNED_BUFSIZE ((CONFIG_NET_ETH_MTU + 255) & ~255)
#define PKTMEM_RX_START 0x0000                            /* RX buffer must be at addr 0 for errata 5 */
#define PKTMEM_RX_END   (PKTMEM_END-ALIGNED_BUFSIZE)      /* RX buffer length is total SRAM minus TX buffer */
#define PKTMEM_TX_START (PKTMEM_RX_END+1)                 /* Start TX buffer after */
#define PKTMEM_TX_ENDP1 (PKTMEM_TX_START+ALIGNED_BUFSIZE) /* Allow TX buffer for two frames */
#define enc_rdgreg(ctrlreg) enc_rdgreg2(ENC_RCR | GETADDR(ctrlreg))
#define enc_wrgreg(ctrlreg, wrdata) enc_wrgreg2(ENC_WCR | GETADDR(ctrlreg), wrdata)
#define enc_bfcgreg(ctrlreg,clrbits) enc_wrgreg2(ENC_BFC | GETADDR(ctrlreg), clrbits)
#define enc_bfsgreg(ctrlreg,setbits) enc_wrgreg2(ENC_BFS | GETADDR(ctrlreg), setbits)
#define SPIx_TIMEOUT  10
#define SPIx_CS   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_RESET);udelay(1)
#define SPIx_DS   HAL_GPIO_WritePin(GPIOB, GPIO_PIN_12, GPIO_PIN_SET);udelay(1)

void enc_reset(ENC_HandleTypeDef *handle)
{
  /* Send the system reset command. */
  SPIx_CS;
  SPIx_TxRx(ENC_SRC);
  SPIx_DS;

  handle->bank = 0; /* Initialize the trace on the current selected bank */
  HAL_Delay(2); /* >1000 us, conforms to errata #2 */
}

bool enc_start(ENC_HandleTypeDef *handle)
{
  uint8_t regval;

  /* Initialize watchdog timer */
  init_udelay();

  /* System reset */
  enc_reset(handle);

  /* Use bank 0 */
  enc_setbank(handle, 0);

  /* Check if we are actually communicating with the ENC28J60. */
  regval = enc_rdbreg(handle, ENC_EREVID);
  if(regval == 0x00 || regval == 0xff)
  {
    return false;
  }

  /* Initialize ECON2: Enable address auto increment. */
  enc_wrgreg(ENC_ECON2, ECON2_AUTOINC /* | ECON2_VRPS*/);

  /* Initialize receive buffer. */
  handle->nextpkt = PKTMEM_RX_START;
  enc_wrbreg(handle, ENC_ERXSTL, PKTMEM_RX_START & 0xff);
  enc_wrbreg(handle, ENC_ERXSTH, PKTMEM_RX_START >> 8);

  /* Set the receive data pointer */
  /* Errata 14 */
  enc_wrbreg(handle, ENC_ERXRDPTL, PKTMEM_RX_END & 0xff);
  enc_wrbreg(handle, ENC_ERXRDPTH, PKTMEM_RX_END >> 8);

  /* Set the receive buffer end. */
  enc_wrbreg(handle, ENC_ERXNDL, PKTMEM_RX_END & 0xff);
  enc_wrbreg(handle, ENC_ERXNDH, PKTMEM_RX_END >> 8);

  /* Set transmit buffer start. */
  handle->transmitLength = 0;
  enc_wrbreg(handle, ENC_ETXSTL, PKTMEM_TX_START & 0xff);
  enc_wrbreg(handle, ENC_ETXSTH, PKTMEM_TX_START >> 8);

  /* Set filter mode: unicast OR broadcast AND crc valid */
  enc_wrbreg(handle, ENC_ERXFCON, ERXFCON_UCEN | ERXFCON_CRCEN | ERXFCON_BCEN);

  do
  {
    HAL_Delay(10); /* Wait for 10 ms to let the clock be ready */
    regval = enc_rdbreg(handle, ENC_ESTAT);
  }while((regval & ESTAT_CLKRDY) == 0);

  /* Enable MAC receive */
  enc_wrbreg(handle, ENC_MACON1, MACON1_MARXEN | MACON1_TXPAUS | MACON1_RXPAUS);

  /* Enable automatic padding and CRC operations */
  if(handle->Init.DuplexMode == ETH_MODE_HALFDUPLEX)
  {
    enc_wrbreg(handle, ENC_MACON3,
        ((handle->Init.ChecksumMode == ETH_CHECKSUM_BY_HARDWARE) ? MACON3_PADCFG0 | MACON3_TXCRCEN : 0) | MACON3_FRMLNEN);
    enc_wrbreg(handle, ENC_MACON4, MACON4_DEFER); /* Defer transmission enable */

    /* Set Non-Back-to-Back Inter-Packet Gap */
    enc_wrbreg(handle, ENC_MAIPGL, 0x12);
    enc_wrbreg(handle, ENC_MAIPGH, 0x0c);

    /* Set Back-to-Back Inter-Packet Gap */
    enc_wrbreg(handle, ENC_MABBIPG, 0x12);
  }
  else
  {
    /* Set filter mode: unicast OR broadcast AND crc valid AND Full Duplex */
    enc_wrbreg(handle, ENC_MACON3,
        ((handle->Init.ChecksumMode == ETH_CHECKSUM_BY_HARDWARE) ? MACON3_PADCFG0 | MACON3_TXCRCEN : 0) | MACON3_FRMLNEN | MACON3_FULDPX);

    /* Set Non-Back-to-Back Inter-Packet Gap */
    enc_wrbreg(handle, ENC_MAIPGL, 0x12);

    /* Set Back-to-Back Inter-Packet Gap */
    enc_wrbreg(handle, ENC_MABBIPG, 0x15);
  }

  /* Set the maximum packet size which the controller will accept */
  enc_wrbreg(handle, ENC_MAMXFLL, (CONFIG_NET_ETH_MTU + 18) & 0xff);
  enc_wrbreg(handle, ENC_MAMXFLH, (CONFIG_NET_ETH_MTU + 18) >> 8);

  /* Setup up PHCON1 & 2 */
  if(handle->Init.DuplexMode == ETH_MODE_HALFDUPLEX)
  {
    enc_wrphy(handle, ENC_PHCON1, 0x00);
    enc_wrphy(handle, ENC_PHCON2, PHCON2_HDLDIS); /* errata 9 workaround */
  }
  else
  {
    enc_wrphy(handle, ENC_PHCON1, PHCON1_PDPXMD); /* errata 10 workaround */
    enc_wrphy(handle, ENC_PHCON2, 0x00);
  }

  /* Process interrupt settings */
  if(handle->Init.InterruptEnableBits & EIE_LINKIE)
  {
    /* Enable link change interrupt in PHY module */
    enc_wrphy(handle, ENC_PHIE, PHIE_PGEIE | PHIE_PLNKIE);
  }

  /* Reset all interrupt flags */
  enc_bfcgreg(ENC_EIR, EIR_ALLINTS);

  regval = handle->Init.InterruptEnableBits;
  if(regval)
  {
    /* Ensure INTIE is set when at least an interruption is selected */
    regval |= EIE_INTIE;
  }
  /* Enable selected interrupts in ethernet controller module */
  enc_bfsgreg(ENC_EIE, regval);

  /* Enable the receiver */
  enc_bfsgreg(ENC_ECON1, ECON1_RXEN);

  return true;
}

static void enc_rdbuffer(void *buffer, int16_t buflen)
{
  SPIx_CS;
  SPIx_TxRx(ENC_RBM);
  SPIx_TxBuf(NULL, buffer, buflen);
}
